@@ -1,5 +1,6 @@
 == master
 
+* Improve documentation on the handling of method conflicts
 * Update Mongoid integration for 2.1.0+ support
 * Fix ActiveRecord machine state predicates incorrectly calling superclass implementation when using targeted attributes
 * Fix error when defining states with the same name as the state's machine in ActiveRecord, MongoMapper, and Mongoid integrations
